force-app/main/default/objects/Business_Central_Mapping__c/Business_Central_Mapping__c.object-meta.xml
<CustomObject>
    <label>Business Central Mapping</label>
    <nameField>
        <displayFormat>BCM-{00000}</displayFormat>
        <label>Business Central Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Central Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>