force-app/main/default/objects/Business_Central_Mapping__c/fields/BC_Field__c.field-meta.xml
<CustomField>
    <fullName>BC_Field__c</fullName>
    <label>BC Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>