force-app/main/default/objects/Business_Central_Mapping__c/fields/BC_Table__c.field-meta.xml
<CustomField>
    <fullName>BC_Table__c</fullName>
    <label>BC Table</label>
    <length>80</length>
    <type>Text</type>
</CustomField>