force-app/main/default/objects/Business_Central_Mapping__c/fields/SF_Field__c.field-meta.xml
<CustomField>
    <fullName>SF_Field__c</fullName>
    <label>SF Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>