force-app/main/default/objects/Business_Central_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BC_Table__c</columns>
    <columns>BC_Field__c</columns>
    <columns>SF_Object__c</columns>
    <columns>SF_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>